<resources>
    <string name="app_name">RenHai</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_logo">HiYa</string>
    <string name="splash_advert">See You By Destiny</string>
    <string name="splash_teamlogo">Copyright © SimpleLife Studio</string>
    <string name="splash_httpfailed_dialogtitle">Connection Failed</string>
    <string name="splash_httpfailed_dialogmsg">Failed to retrieve the server info</string>
    <string name="splash_httpfailed_dialogposbtn">Retry</string>
    <string name="splash_httpfailed_dialognegbtn">Quit</string>
    <string name="splash_conntimeout_dialogtitle">Network connection time out</string>
    <string name="splash_conntimeout_dialogposbtn">Re-Connect</string>
    <string name="splash_conntimeout_dialognegbtn">Quit</string>
    <string name="protocal_title">User Agreement</string>
    <string name="protocal_yes">Roger</string>
    <string name="protocal_no">Damn</string>
    <string name="introduce_page0_text">Define your interest labels</string>
    <string name="introduce_page1_text_part1">Match a stranger with similar interest</string>
    <string name="introduce_page1_text_part2">To chat over video</string>
    <string name="introduce_page1_button_text">Start</string>
    <string name="viewpager_section_start">My RenHai</string>
    <string name="viewpager_section_topics">My Topics</string>
    <string name="viewpager_section_impressions">My Impressions</string>
    <string name="mainpage_title_preparenetwork">Prepare Network&#8230;</string>
    <string name="mainpage_title_connectionlost">Connection Lost</string>
    <string name="mainpage_title_connectserver">Connect RenHai&#8230;</string>
    <string name="mainpage_title_syncserver">Syncronizing&#8230;</string>
    <string name="mainpage_title_updateinfo">Updating Info&#8230;</string>
    <string name="mainpage_title">Connected</string>
    <string name="mainpage_connlostdialogtitle">Web connection lost</string>
    <string name="mainpage_connlostdialogmsg">Web connection lost, re-connect now?</string>
    <string name="mainpage_connlostdialogposbtn">Re-Connect</string>
    <string name="mainpage_connlostdialognegbtn">Cancel</string>
    <string name="mainpage_dismissserverstatinfo">OK</string>
    <string name="mainpage_statinfopart1">Dear friends, we plan to maintain our server during </string>
    <string name="mainpage_statinfopart2"> the Hiya service will be idle at that time, please accept our sincere apologies。 －Simplelife Studio</string>
    <string name="mytopics_inttitle1">My Topics</string>
    <string name="mytopics_inttitle2">Hot Topics</string>
    <string name="mytopics_create">New</string>
    <string name="mytopics_delete">Delete</string>
    <string name="mytopics_refresh">Refresh</string>
    <string name="mytopics_intdialogtitle">Interest Label</string>
    <string name="mytopics_intdialogmsg">Your interest is not defined, define now?</string>
    <string name="mytopics_intdialogposbtn">Confirm</string>
    <string name="mytopics_intdialognegbtn">Cancel</string>
    <string name="mytopics_inttxtbuildtitle">Enter your interest label</string>
    <string name="mytopics_inttxtbuildposbtn">Confirm</string>
    <string name="mytopics_inttxtbuildnegbtn">Cancel</string>
    <string name="mytopics_intcontinuedialogtitle">Interest Label</string>
    <string name="mytopics_intcontinuedialogmsg">Continue to define interest labels?</string>
    <string name="mytopics_intcontinuedialogposbtn">Confirm</string>
    <string name="mytopics_intcontinuedialognegbtn">Cancel</string>
    <string name="mytopics_inteditordelbuildtitle">Interest Label</string>
    <string name="mytopics_inteditordelbuildposbtn">Confirm</string>
    <string name="mytopics_inteditordelbuildneubtn">Cancel</string>
    <string name="mytopics_inteditordelbuildnegbtn">Delete</string>
    <string name="mytopics_glbintlabelempty">No global hot topics</string>
    <string name="mytopics_intlbreddialogtitle">Interest Label</string>
    <string name="mytopics_intlbreddialogmsg">This label has already been defined</string>
    <string name="mytopics_intlbreddialogposbtn">Confirm</string>
    <string name="mytopics_invalidlabdialogtitle">Interest Label</string>
    <string name="mytopics_invalidlabdialogmsg">Label just defined is invalid</string>
    <string name="mytopics_invalidlabdialogposbtn">Confirm</string>
    <string name="mytopics_test">basketball</string>
    <string name="mytopics_testint1">Basketball</string>
    <string name="mytopics_testint2">Football</string>
    <string name="mytopics_testint3">Music</string>
    <string name="mytopics_testint4">Reading</string>
    <string name="mytopics_testint5">Coding</string>
    <string name="mytopics_testint6">Guitar</string>
    <string name="startvedio_onlinecount">Online Count</string>
    <string name="startvedio_chatcount">Chatting Count</string>
    <string name="startvedio_buttontext">Start</string>
    <string name="startvedio_btnpreparing">Preparing&#8230;</string>
    <string name="startvedio_btnmatching">Matching&#8230;</string>
    <string name="myimpression_imptitle1">My Impressions Marked</string>
    <string name="myimpression_imptitle2">My Impression Labels</string>
    <string name="myimpression_glbintlabelempty">No impression labels yet</string>
    <string name="myimpression_happylabel">Happy</string>
    <string name="myimpression_sosolabel">SoSo</string>
    <string name="myimpression_disgustlabel">Disgusting</string>
    <string name="myimpression_chatcount">Chat Count</string>
    <string name="myimpression_chattotalduration">Chat Duration</string>
    <string name="myimpression_chatlosscount">Chat Lost</string>
    <string name="waitformatch_counterstart">0</string>
    <string name="waitformatch_counternote">Matching&#8230;</string>
    <string name="waitformatch_cancelbtn">Cancel</string>
    <string name="waitformatch_connectionlost_dialogtitle">Network connection lost</string>
    <string name="waitformatch_connectionlost_dialogposbtn">Back</string>
    <string name="waitformatch_timeoutnote">Sorry, no one is out there.</string>
    <string name="waitformatch_retrybtn">Retry</string>
    <string name="waitformatch_backbtn">Back</string>
    <string name="matching_peerassess">Peer User Assessments</string>
    <string name="matching_peerimpression">Peer User Impressions</string>
    <string name="matching_matchconditionpart1">Match Based On Label </string>
    <string name="matching_matchconditionpart2"></string>
    <string name="matching_counterstart">20</string>
    <string name="matching_peerstattext">Waiting for peer to confirm&#8230;</string>
    <string name="matching_peerstattextagree">Peer accepted the chat</string>
    <string name="matching_peerstattextreject">Peer rejected the chat</string>
    <string name="matching_peerstattextlost">Peer lost the connection</string>
    <string name="matching_accept">Accept</string>
    <string name="matching_refuse">Refuse</string>
    <string name="matching_back">Back</string>
    <string name="matching_counttimeout">Time Out</string>
    <string name="video_btnwritemsg">Message</string>
    <string name="video_btnhangoff">End Call</string>
    <string name="video_notification">Ongoing call</string>
    <string name="video_peerhangoff">Peer side hang off the call</string>
    <string name="video_msghint">Please enter the message&#8230;</string>
    <string name="assess_title1">Assessment for peer</string>
    <string name="assess_title2">Impressions to peer</string>
    <string name="assess_title3">Impressions achieved by peer</string>
    <string name="config_aboutpage_version">Version</string>
    <string name="config_aboutpage_author">SimpleLife Studio&#160;版权所有</string>
    <string name="config_aboutpage_copyright">Copyright(©) 2014&#045;2015&#046;</string>
    <string name="config_aboutpage_allrightreserved">All Rights Reserved&#046;</string>
    <string name="protocal_text">
\t\t人海是一款基于话题匹配的视频社交产品，人海所提供的各项服务的所有权和运作权归简单生活工作室（SimpleLife Studio，以下称人海官方）所有。
\n\t\t本协议（包括隐私保护声明）是由您（终端用户）与人海官方之间就人海提供的各项服务所订立的相关权利义务规范，本协议将对您使用人海产生法律约束力。
\n\t\t人海官方在此特别提醒您，在您使用人海服务前请仔细阅读本协议，只有同意本协议后才能使用人海产品。
\n\t\t协议所称的用户是指完全同意所有协议条款的用户，对于不同意或者部分同意协议条款的用户，无权下载、安装或者使用人海以及相关的服务。
\n\t\t1、	终端用户协议 
\n\t\t1.1.	许可
\n\t\t依据本协议规定，人海将授予您以下不可转让的、非排他的许可：在您持有的移动通信设备下载、安装以及使用人海的权利。
\n\t\t1.2.	限制性条款
\n\t\t1.2.1.	您不得对人海进行任何形式的许可、出售、租赁、转让、发行或做其他商业用途；
\n\t\t1.2.2.	除非法律禁止此类限制，否则您不得对人海的任何部分或衍生产品进行修改、翻译、改编、合并、利用、分解或反向编译等；
\n\t\t1.2.3.	您不得以创建相同或竞争服务为目的使用人海；
\n\t\t1.2.4.	除非法律明文规定，否则您不得对人海的任何部分以任何形式或方法进行复制、发行、再版、下载、显示或张贴等；
\n\t\t1.2.5.	您不得删除或破坏包含在人海中的任何版权声明或其他所有权标记。
\n\t\t1.3.	权利归属
\n\t\t1.3.1.	人海官方许可您下载和使用人海；
\n\t\t1.3.2.	人海官方拥有人海的包括相关的知识产权在内的所有权利、所有权和利益，但不包括您的用户内容。
\n\t\t2、	使用及用户权利 
\n\t\t2.1.	账号
\n\t\t人海直接与移动终端绑定，因此您无需注册任何账号或者绑定第三方账号，但也限制了您无法在一台终端设备上使用多个账号聊天。
\n\t\t2.2.	内容许可
\n\t\t您使用人海的过程中产生的视频内容，所有权和许可属于您自己，人海以及人海官方不会使用任何手段录制视频并转作他用。
\n\t\t2.3.	费用
\n\t\t视频聊天是一个高流量的应用，因此建议在WIFI环境下使用。您必须自行负担个人上网或第三方（包括但不限于电信或移动通讯提供商）收取的流量费用。如涉及增值服务，相关费用以公告内容为准。 
\n\t\t3、	用户义务
\n\t\t您已同意通过视频上传的方式使用人海的服务，在使用过程中，您的下述行为会造成您的设备被人海官方禁聊而无法使用人海提供的服务，而且需要承担产生的全部法律责任：
\n\t\t1)	破坏宪法所确定的基本原则的；
\n\t\t2)	危害国家安全、泄露国家秘密、颠覆国家政权、破坏国家统一的; 
\n\t\t3)	损害国家荣誉和利益的；
\n\t\t4)	煽动民族仇恨、民族歧视，破坏民族团结的；
\n\t\t5)	破坏国家宗教政策，宣扬邪教和封建迷信的；
\n\t\t6)	散布谣言，扰乱社会秩序，破坏社会稳定的；
\n\t\t7)	散布淫秽、色情、欺诈、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
\n\t\t8)	侮辱或者诽谤他人，侵害他人合法权益的；
\n\t\t9)	恶意差评他人；
\n\t\t10)	从事色情相关的活动；
\n\t\t11)	视频聊天过程中被对方投诉具有暴露癖性质的行为；
\n\t\t12)	未经对方同意蓄意录制对方视频并对对方造成伤害；
\n\t\t13)	含有法律、行政法规禁止的其他内容的。
\n\t\t4、	修改、终止
\n\t\t4.1.	修改
\n\t\t4.1.1.	本协议容许变更，变更通知之后，继续使用人海则视为您已知晓此类变更并同意受条款约束。
\n\t\t4.1.2.	人海官方保留在任何时候无需通知而修改、保留或关闭人海任何服务之权利。
\n\t\t4.1.3.	您已同意人海无需因修改、保留或关闭人海，或其他服务的行为对您或第三方承担责任。
\n\t\t4.2.	终止
\n\t\t4.2.1.	本协议自您接受之日起生效，在您使用人海的过程中持续有效，直至依据本协议终止；
\n\t\t4.2.2.	尽管有上述规定，如果您使用人海的时间早于您接受本协议的时间，您在此知晓并同意本协议于您第一次使用人海时生效，除非依据本协议提前终止。
\n\t\t4.2.3.	我们可能会:依据法律的规定，保留您使用人海的权利；无论是否通知，我们将在任何时间以任何原因终止本协议，包括您出于善意地违反了我们可接受的使用政策或本协议的其他规定。
\n\t\t4.2.4.	不受前款规定所限，如果用户侵犯第三人的版权且人海接到版权所有人或版权所有人的合法代理人的通知后，人海保留终止本协议的权利。
\n\t\t4.2.5.	一旦本协议终止，您使用人海的权利即告终止。
\n\t\t5、	第三方
\n\t\t5.1.	第三方技术
\n\t\t您已知晓或同意我们的服务是基于第三方的技术支持获得，您已知晓本协议是在您与本公司之间签订，而非您与第三方之间签订。人海官方是基于人海所产生的内容、维护、支持服务、保证和由此产生的诉讼等事项的唯一责任人。您已同意遵守且授权给人海官方限制您有条件的使用人海的服务。
\n\t\t5.2.	第三方网站和广告
\n\t\t5.2.1.	人海若包含第三方网站和广告。人海不控制且不对第三方的网站和广告负责。
\n\t\t5.2.2.	人海仅为您使用方便之目的或为承诺和保证第三方之需要而提供此类网站和广告。
\n\t\t5.2.3.	您需对您使用第三方网站和广告产生的风险承担法律责任。
\n\t\t5.2.4.	当您访问第三方网站和广告时，适用第三方的条款和政策。
\n\t\t5.3.	其他用户
\n\t\t5.3.1.	人海包含其他用户提供的用户内容。人海不控制且不对用户内容承担法律责任。人海没有检查、监控、审批、核准、承诺并保证用户内容的义务。您必须因使用用户内容和与其他用户互动产生的风险承担法律责任。
\n\t\t5.3.2.	您与其他用户的互动仅属于您与其他用户之间的行为，人海对此类行为不承担任何法律责任。您已同意人海对此类互动行为的结果不承担法律责任。
\n\t\t6、	赔偿
\n\t\t1)	您已同意无害的使用人海，避免人海因下述行为或相关行为遭受来自第三方的任何投诉、诉讼、损失、损害、责任、成本和费用（包括律师费）：您使用人海的行为；您的用户内容；您违反本协议的行为。
\n\t\t2)	人海保留专属抗辩权和请求赔偿的权利。
\n\t\t3)	您已同意，除非获得人海书面同意，您不得在您与人海共同对第三方提起的诉讼中单方和解。
\n\t\t4)	人海将尽合理努力将此类诉讼、诉讼行为或进程通知您。
\n\t\t5)	在任何情况下，人海都不对您或任何第三方因本协议产生的任何间接性、后果性、惩戒性的、偶然的、特殊或惩罚性的损害赔偿承担责任。使用人海所产生的损坏计算机系统或移动通讯设备数据库的风险将由您个人承担。
\n\t\t7、	免责声明 
\n\t\t如发生下述情形，人海不承担任何法律责任：
\n\t\t1)	依据法律规定或相关政府部门的要求提供您的个人信息；
\n\t\t2)	由于您的使用不当而导致任何个人信息的泄露；
\n\t\t3)	任何由于黑客攻击，电脑病毒的侵入，非法内容信息、骚扰信息的屏蔽，政府管制以及其他任何网络、技术、通信线路、信息安全管理措施等原因造成的服务中断、受阻等不能满足用户要求的情形；
\n\t\t4)	用户因第三方如运营商的通讯线路故障、技术问题、网络、电脑故障、系统不稳定及其他因不可抗力造成的损失的情形；
\n\t\t5)	使用人海可能存在的来自他人匿名或冒名的含有威胁、诽谤、令人反感或非法内容的信息而招致的风险；
\n\t\t6)	用户通过人海与其他用户交往，因受误导或欺骗而导致或可能导致的任何心理、生理上的伤害以及经济上的损失；
\n\t\t7)	人海明文声明，不以明示或默示及以任何形式对人海及其合作公司服务之及时性、安全性、准确性做出担保。
\n\t\t8、	通知
\n\t\t人海发布的公告通知毫无疑问构成有效通知。
\n\t\t9、	适用法律 
\n\t\t本协议适用中华人民共和国法律。 如果双方发生纠纷，应本着友好的原则协商解决；如协商不成，应向人海官方所在地的法院提起诉讼。 
\n\t\t10、	独立性
\n\t\t本协议中的某些条款因故无法适用，则本协议的其他条款继续适用且无法适用的条款将会被修改，以便其能够依法适用。
\n\t\t11、	完整性
\n\t\t1)	本协议是您和本公司之间关于人海相关事项的最终的、完整的、排他的协议，且取代和合并之前当事人关于此类事项（包括之前的最终用户许可、服务条款和隐私政策）的讨论和协议；
\n\t\t2)	每部分的标题只为阅读之便而无任何法律或合同义务；
\n\t\t3)	除非人海官方书面同意，您不得转让本协议所规定的权利义务。任何违反上述规定企图转让的行为均无效。
\n\t\t12、	联系我们
\n\t\t邮箱：simplelife.renhai@gmail.com
\n\t\t官方微信：rhsjpt("人海社交平台"的拼音首字母缩写)
\n\n\t\t人海官方保留本协议文本所有条款以及相关情况的最终解释权（2014年4月17日）
        
    </string>
</resources>