<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"    
    android:layout_height="fill_parent" 
    android:background="@color/white">    

    <View
        android:id="@+id/about_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginTop="60dip"
        android:background="@drawable/renhai_icon" />

        <TextView
            android:id="@+id/about_appname"
            style="@style/A1_Font"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_logo"
            android:layout_marginTop="15dip"
            android:gravity="center_horizontal"
            android:paddingLeft="0.0dip"
            android:text="@string/splash_logo" />

        <TextView
            android:id="@+id/about_version"
            style="@style/A2_Font"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_appname"
            android:layout_marginTop="5dip"
            android:gravity="center_horizontal"
            android:paddingLeft="0.0dip"
            android:text="@string/config_aboutpage_version" />


       <TextView
            android:id="@+id/about_allrightreserved"
            style="@style/A4_Font"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dip"
            android:gravity="center_horizontal"
            android:paddingLeft="0.0dip"
            android:text="@string/config_aboutpage_allrightreserved" />

       <TextView
            android:id="@+id/about_copyright"
            style="@style/A4_Font"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/about_allrightreserved"
            android:layout_marginBottom="2dip"
            android:gravity="center_horizontal"
            android:paddingLeft="0.0dip"
            android:text="@string/config_aboutpage_copyright" />
               
       <TextView
	        android:id="@+id/about_reserved"
	        style="@style/A4_Font"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_above="@id/about_copyright"
	        android:layout_marginBottom="2dip"
	        android:gravity="center_horizontal"
	        android:paddingLeft="0.0dip"
	        android:text="@string/config_aboutpage_author" />

</RelativeLayout>
