<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    
    <TextView 
        android:id="@+id/waitingformatch_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" 
        android:gravity="center"       
        android:textSize="@dimen/waitformatch_countersize"
        android:textColor="@color/maingreen"
        android:textStyle="bold"
        android:text="@string/waitformatch_counterstart" />
    
    <TextView 
        android:id="@+id/waitingformatch_counternote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/waitingformatch_counter"
        android:layout_marginTop="16dp"
        android:layout_centerInParent="true" 
        android:gravity="center"       
        android:textSize="20sp"
        android:textColor="@color/maingreen"
        android:text="@string/waitformatch_counternote" />
    
   <LinearLayout
        android:id="@+id/waitingformatch_btnlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/waitingformatch_btncancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/protocal_btn_selector"
            android:gravity="center_vertical|center"
            android:text="@string/waitformatch_cancelbtn"
            android:textSize="@dimen/protocal_btn_size"
            android:textColor="#FFFFFF" >
        </TextView>
    </LinearLayout>

</RelativeLayout>
