<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/protocal_confirm">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="@dimen/protocal_text_size"
            android:text="@string/protocal_text"/>
        
    </ScrollView>
    
    <LinearLayout
        android:id="@+id/protocal_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/protocal_btnyes"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/protocal_btn_selector"
            android:gravity="center_vertical|center"
            android:text="@string/protocal_yes"
            android:textSize="@dimen/protocal_btn_size"
            android:textColor="#FFFFFF" >
        </TextView>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="3dip"
            android:layout_marginTop="3dip"
            android:background="#FFFFFFFF" />

        <TextView
            android:id="@+id/protocal_btnno"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/protocal_btn_selector"
            android:gravity="center_vertical|center"
            android:text="@string/protocal_no"
            android:textSize="@dimen/protocal_btn_size"
            android:textColor="#FFFFFF" >
        </TextView>
    </LinearLayout>            
    
</RelativeLayout>
