<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/maingreen"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/whats_new_title1_tv"
            style="@style/style_introduce_title"
            android:gravity="center"
            android:paddingLeft="0.0dip"
            android:text="@string/introduce_page1_text_part1" />

        <TextView
            android:id="@+id/whats_new_title2_tv"
            style="@style/style_introduce_title"
            android:layout_marginTop="0.0dip"
            android:gravity="center"
            android:paddingLeft="0.0dip"
            android:text="@string/introduce_page1_text_part2" />
        
        <ImageView
	        android:id="@+id/img_iv"
	        android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
	        style="@style/style_introduce_img"
	        android:src="@drawable/introduce_page1_img" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:gravity="center_horizontal"
            android:paddingTop="5.0dip"
            android:layout_marginBottom="32dp" >

            <Button
                android:id="@+id/whats_new_start_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/introduce_page_button"
                android:duplicateParentState="false"
                android:paddingLeft="30.0dip"
                android:paddingRight="30.0dip"
                android:text="@string/introduce_page1_button_text"
                android:gravity="center_vertical"
                android:textColor="#ffffffff"
                android:onClick="onStartClick"
                android:textSize="@dimen/introduce_small_textsize" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
