<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maingreen"
    tools:context=".RenHaiSplashActivity" >
    
    <!--     android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" -->

    <TextView
        android:id="@+id/splash_applogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:textSize="@dimen/splash_logo_size"
        android:textColor="@android:color/white"
        android:text="@string/splash_logo" />
    
    <LinearLayout
        android:id="@+id/splash_barlayout" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_applogo"
        android:layout_marginTop="16dp">

        <com.simplelife.renhai.android.ui.RenHaiProgressBar 
            android:id="@+id/splash_progressbar"
            android:layout_width="fill_parent"
            android:layout_height="1dp"/>        
    </LinearLayout>
    
    <TextView 
        android:id="@+id/splash_progresstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_barlayout"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/splash_progresstext_size"
        android:textColor="@android:color/white" />    
           
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/splashteamlogo"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/splash_advt_size"
        android:textColor="@android:color/white"
        android:text="@string/splash_advert" />
    
    <TextView
        android:id="@+id/splashteamlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/white"
        android:text="@string/splash_teamlogo" />

</RelativeLayout>
